# newtons_fractal

./: .clang-format  CMakeLists.txt  README.md  main.cpp
compute/: Fractal.cpp  Fractal.hpp  Fractal.ispc
display/: Display.cpp  Display.hpp
export/: Image.cpp  Image.hpp
tests/: PerfTests.cpp
